--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,3 +7,6 @@ $univ-pad: 18px;
 $opacity-fade: opacity 0.5s ease 0s;
 $opacity-fade-out: opacity 0.25s ease 0s;
 
+$text-bg: rgb(255,255,255);
+$text-color: rgb(0,0,0);
+
