--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,7 +11,7 @@ body {
   }
   
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 700;
+  font-weight: 400;
   }
 
 h1 {
@@ -60,40 +60,40 @@ p {
     width:250px-($univ-pad * 1.5);
     padding: 0;
     h4, p {
-      font-size: 36px;
+      font-size: 26px;
       font-weight: 400;
       letter-spacing: 0.015em;
       line-height: 1em;
-      background-color: rgba(255,255,255,0.25);
-      margin: $univ-pad;
-      margin-left: 0;
-      margin-bottom:0;
-      padding:($univ-pad * 0.5);
-      padding-left: $univ-pad;
+      margin: ($univ-pad*0.66) $univ-pad 0 0;
+      padding:($univ-pad * 0.5)$univ-pad;
+      color: $text-color;
       }
     p {
       font-size: 16px;
       margin-top:0;
       padding-top:0;
-      padding-bottom:$univ-pad;
-
+      padding-bottom:$univ-pad;      
       }   
     .image {
       img {
         position: absolute;
         z-index: 0;
         height:100%;
-        } 
-        
-      }     
+        }  
+      /* img.normal { -webkit-filter: grayscale(100%);-moz-filter: grayscale(100%);filter: grayscale(100%); }    */
+      }
     .normal { opacity:1; position: absolute;     
       transition: $opacity-fade-out;
       -webkit-transition: $opacity-fade-out;
-      -moz-transition: $opacity-fade-out;}    
+      -moz-transition: $opacity-fade-out;
+      h4,p {background-color: rgba($text-bg,0.33);}
+      }    
     .hovered  { opacity:0; position: absolute;     
       transition: $opacity-fade-out;
       -webkit-transition: $opacity-fade-out;
-      -moz-transition: $opacity-fade-out;}
+      -moz-transition: $opacity-fade-out;
+      h4,p {background-color: rgba($text-bg,0.9);}      
+      }
     }
   .overlay:hover {
     .normal { 
@@ -112,17 +112,16 @@ p {
   .work-links {
     position: absolute;
     bottom:($univ-pad * 1.25);
-    left:$univ-pad;
+    right:$univ-pad;
      a {
-      background-color: rgba($link-color-inv,0.66);
-      border-radius: 2px;
+      background-color: rgba($link-color-inv,0.33);
       padding:($univ-pad * 0.3) ($univ-pad * 0.5);
       margin-right: ($univ-pad * 0.3);
       color:$link-color;
       }
-      a:hover { background-color: rgba( $link-color-inv,1); color: rgba( $link-color-spot, 1 ) }
-      a:active { background-color: rgba( $link-color-spot, 1 ); color: rgba( $link-color-inv, 1 )  }
-      a:focus { background-color: rgba($link-color-inv,0.25);}
+      a:hover { background-color: rgba( $link-color-inv,1); color: rgba( $link-color-spot, 1 ); border-radius: 3px; }
+      a:active { background-color: rgba( $link-color-spot, 1 ); color: rgba( $link-color-inv, 1 ); border-radius: 3px;   }
+      a:focus { background-color: rgba($link-color-inv,0.25); border-radius: 3px; }
       a:visited { color:$link-color; }
     }
 
