--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,16 @@
-$link-color: rgb(0,0,0);
-$link-color-inv: rgb(255,255,255);
-$link-color-spot: rgb(111,0,255);
+$spot-color: rgb(60,0,255);
+$spot-color-riff: rgb(243,206,184);
+$spot-color-riff: rgb(255,77,0);
+$spot-color-riff: rgb(150,250,0);
+$spot-color-riff: rgb(250,250,0);
+$spot-color-riff: rgb(0,0,0);
+
+$link-color: rgb(255,255,255);
+$link-color-inv: $link-color;
+$link-color-spot: $spot-color;
+
+$grad-color: $spot-color;
+$grad-color-hover: $spot-color-riff;
 
 $univ-pad: 18px;
 
