--- a/styles/main.css
+++ b/styles/main.css
@@ -484,7 +484,7 @@ p {
   height: 100%; }
 
 #page {
-  width: 1250px;
+  width: 1200px;
   margin: 0px auto;
   padding: 36px 0; }
 
@@ -495,12 +495,15 @@ p {
   margin-bottom: 72px; }
 
 .student {
-  height: 293px;
-  width: 223px;
+  height: 313px;
+  width: 233px;
+  width: 19%;
   overflow: hidden;
-  position: static;
+  position: relative;
   float: left;
   margin: 0px 27px 27px 0px;
+  margin: 0px 5.94px 5.94px 0px;
+  margin: 0px 1% 1% 0px;
   background-color: #3c00ff;
   background-color: #fff; }
 
@@ -604,11 +607,21 @@ footer {
 /** Responsive Styles ******************************************************/
 @media screen and (max-width: 1240px) {
   #page {
-    width: 960px; } }
+    width: 960px; }
+
+  .student {
+    height: 313px;
+    width: 24%;
+    margin: 0px 1% 1% 0px; } }
 @media screen and (max-width: 1024px) {
   #page {
     width: 80%;
-    padding: 10%; } }
+    padding: 10%; }
+
+  .student {
+    height: 513px;
+    width: 49%;
+    margin: 0px 1% 1% 0px; } }
 /** @fontface Import ******************************************************/
 @font-face {
   font-family: 'Calibre';
