--- a/styles/main.scss
+++ b/styles/main.scss
@@ -45,7 +45,7 @@ p {
   }
   
 #page {
-  width:1250px;
+  width:1200px;
   margin:0px auto;
   padding: ($univ-pad * 2) 0;
   }
@@ -57,12 +57,15 @@ p {
   }
   
 .student {
-  height:320px-($univ-pad * 1.5);
-  width:250px-($univ-pad * 1.5);
+  height:340px-($univ-pad * 1.5);
+  width:260px-($univ-pad * 1.5);
+  width:19%;
   overflow:hidden;
-  position: static;
+  position: relative;
   float:left;
   margin: 0px ($univ-pad * 1.5) ($univ-pad * 1.5) 0px;
+  margin: 0px ($univ-pad * 0.33) ($univ-pad * 0.33) 0px;
+  margin: 0px 1% 1% 0px;
   background-color: $spot-color;
   background-color: #fff;
   }
@@ -180,11 +183,21 @@ footer {
 /** Responsive Styles ******************************************************/
 
 @media screen and (max-width: 1240px) {
-  #page { width:960px; }  
+  #page { width:960px; } 
+  .student {
+    height:340px-($univ-pad * 1.5);
+    width:24%;
+    margin: 0px 1% 1% 0px;
+    } 
   }
   
 @media screen and (max-width: 1024px) {
   #page { width:80%; padding: 10%}  
+  .student {
+    height:540px-($univ-pad * 1.5);
+    width:49%;
+    margin: 0px 1% 1% 0px;
+    }
   }
 
 /** @fontface Import ******************************************************/
