--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,8 +9,8 @@ $link-color: rgb(255,255,255);
 $link-color-inv: $link-color;
 $link-color-spot: $spot-color;
 
-$grad-color: $spot-color;
-$grad-color-hover: $spot-color-riff;
+$grad-color: $spot-color-riff;
+$grad-color-hover: $spot-color;
 
 $univ-pad: 18px;
 
