--- a/styles/main.css
+++ b/styles/main.css
@@ -458,26 +458,28 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
-  color: black;
-  color: #000; }
+  color: #3c00ff; }
 
 h1 {
-  font-size: 45px;
+  font-size: 50px;
   margin-bottom: 18px; }
 
 h4 {
-  font-size: 26px;
+  font-size: 32px;
   font-weight: 400;
   letter-spacing: 0.015em;
-  line-height: 1em; }
+  line-height: 1em;
+  color: black; }
 
 p {
   color: black;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 300;
   margin: 0;
   padding: 0;
-  letter-spacing: 0.015em; }
+  letter-spacing: 0.015em;
+  line-height: 1.125em;
+  max-width: 66%; }
 
 /* Layout Styles *******************/
 #container {
@@ -502,14 +504,17 @@ p {
   float: left;
   margin: 0px 27px 27px 0px;
   background-color: #3c00ff;
-  background-color: #fff; }
+  background-color: #fff;
+  /* border-top:12px solid black; */
+  border-bottom: 10px solid black; }
 
 .student-container {
   position: relative;
   height: 100%;
   width: 100%;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  /* img.normal { -webkit-filter: grayscale(100%);-moz-filter: grayscale(100%);filter: grayscale(100%); }    */ }
   .student-container h4, .student-container p {
     margin: 11.88px 18px 0 0;
     padding: 13.5px 18px 9px 18px;
@@ -518,20 +523,17 @@ p {
   .student-container p {
     margin-top: 0;
     padding-top: 0;
-    padding-bottom: 18px; }
+    padding-bottom: 18px;
+    font-size: 16px; }
   .student-container .image img {
     position: absolute;
     top: 0;
     z-index: 0;
     height: 100%; }
-  .student-container img.normal {
-    -webkit-filter: grayscale(100%);
-    -moz-filter: grayscale(100%);
-    filter: grayscale(100%); }
   .student-container .coverup {
-    background: linear-gradient(-75deg, rgba(60, 0, 255, 0) 66%, rgba(60, 0, 255, 0.75) 100%);
-    background: -webkit-linear-gradient(-75deg, rgba(60, 0, 255, 0) 66%, rgba(60, 0, 255, 0.75) 100%);
-    background: -moz-linear-gradient(-75deg, rgba(60, 0, 255, 0) 66%, rgba(60, 0, 255, 0.75) 100%);
+    background: linear-gradient(-75deg, transparent 66%, rgba(0, 0, 0, 0.75) 100%);
+    background: -webkit-linear-gradient(-75deg, transparent 66%, rgba(0, 0, 0, 0.75) 100%);
+    background: -moz-linear-gradient(-75deg, transparent 66%, rgba(0, 0, 0, 0.75) 100%);
     height: 100%;
     width: 100%;
     z-index: 5;
@@ -580,12 +582,25 @@ p {
   -webkit-transition: opacity 0.5s ease 0s;
   -moz-transition: opacity 0.5s ease 0s; }
 .student-container:hover .coverup {
-  background: linear-gradient(-75deg, transparent 66%, rgba(0, 0, 0, 0.75) 100%);
-  background: -webkit-linear-gradient(-75deg, transparent 66%, rgba(0, 0, 0, 0.75) 100%);
-  background: -moz-linear-gradient(-75deg, transparent 66%, rgba(0, 0, 0, 0.75) 100%); }
+  background: linear-gradient(-75deg, rgba(60, 0, 255, 0) 66%, rgba(60, 0, 255, 0.75) 100%);
+  background: -webkit-linear-gradient(-75deg, rgba(60, 0, 255, 0) 66%, rgba(60, 0, 255, 0.75) 100%);
+  background: -moz-linear-gradient(-75deg, rgba(60, 0, 255, 0) 66%, rgba(60, 0, 255, 0.75) 100%); }
+.student-container:hover img {
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  filter: grayscale(100%); }
 
 a {
   line-height: 24px; }
+
+a:hover {
+  color: #3c00ff; }
+
+a:focus {
+  color: #3c00ff; }
+
+a:active {
+  color: #3c00ff; }
 
 a:visited {
   color: inherit; }
@@ -594,7 +609,15 @@ nav {
   width: 100%;
   height: 24px;
   padding: 6px 12px;
-  background-color: #eee; }
+  background-color: #000;
+  color: #fff; }
+  nav a {
+    margin-right: 4.5px;
+    font-weight: 300;
+    font-size: 14px; }
+  nav a:first-child {
+    text-decoration: none;
+    cursor: pointer; }
 
 footer {
   width: 100%;
