--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,30 +12,32 @@ body {
   
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
-  color: $spot-color-riff;
-  color: #000;
+  color: $spot-color;
   }
 
 h1 {
-  font-size: 45px;
+  font-size: 50px;
   margin-bottom: $univ-pad;
   }
   
 h4 {
-  font-size: 26px;
+  font-size: 32px;
   font-weight: 400;
   letter-spacing: 0.015em;
   line-height: 1em;
+  color: $text-color;
   }
 
 
 p {
-      color: $text-color;
-  font-size: 16px;
+  color: $text-color;
+  font-size: 18px;
   font-weight: 300;
   margin: 0;
   padding: 0;
   letter-spacing: 0.015em;
+  line-height: 1.125em;
+  max-width: 66%;
 }
 
 /* Layout Styles *******************/
@@ -65,6 +67,8 @@ p {
   margin: 0px ($univ-pad * 1.5) ($univ-pad * 1.5) 0px;
   background-color: $spot-color;
   background-color: #fff;
+  /* border-top:12px solid black; */
+  border-bottom:10px solid black;
   }
   
 .student-container {
@@ -82,7 +86,8 @@ p {
   p {
     margin-top:0;
     padding-top:0;
-    padding-bottom: $univ-pad
+    padding-bottom: $univ-pad;
+    font-size: 16px;
     } 
       
   .image img {
@@ -92,7 +97,7 @@ p {
       height:100%;
 
       }  
-  img.normal { -webkit-filter: grayscale(100%);-moz-filter: grayscale(100%);filter: grayscale(100%); }   
+  /* img.normal { -webkit-filter: grayscale(100%);-moz-filter: grayscale(100%);filter: grayscale(100%); }    */
     
   .coverup {
     background:linear-gradient(-75deg, rgba($grad-color,0)66%, rgba($grad-color,0.75)100%);
@@ -154,19 +159,30 @@ p {
     background:-webkit-linear-gradient(-75deg, rgba($grad-color-hover,0)66%, rgba($grad-color-hover,0.75)100%);
     background:-moz-linear-gradient(-75deg, rgba($grad-color-hover,0)66%, rgba($grad-color-hover,0.75)100%);
     }
+  img { -webkit-filter: grayscale(100%);-moz-filter: grayscale(100%);filter: grayscale(100%); }   
   }
 
 a {line-height: 24px;}
-a:hover {}
-a:focus {}
-a:active {}
-a:visited { color:inherit;}
+a:hover {color:$spot-color;}
+a:focus {color:$spot-color;}
+a:active {color:$spot-color;}
+a:visited {color:inherit;}
 
 nav {
   width:100%;
   height:24px;
   padding:6px 12px;
-  background-color: #eee;
+  background-color: #000;
+  color:#fff;
+  a {
+    margin-right: ($univ-pad * 0.25); 
+    font-weight: 300;
+    font-size: 14px;
+    }
+  a:first-child {
+    text-decoration: none;
+    cursor:pointer;
+    }
   }
 
 footer {
