--- a/styles/_hover.scss
+++ b/styles/_hover.scss
@@ -1,50 +1,48 @@
-.grid {
-	margin: 0 auto;
-	text-align: center;
-}
 
-.grid figure {
+
+.cs-style-1 figure {
 	margin: 0;
 	position: relative;
 }
 
-.grid figure img {
+.cs-style-1 figure img {
 	max-width: 100%;
 	display: block;
 	position: relative;
+	/*  -webkit-filter: grayscale(100%);-moz-filter: grayscale(100%);filter: grayscale(100%) */; 
 }
 
-.grid figcaption {
+.cs-style-1 figcaption {
 	position: absolute;
 	top: 0;
 	left: 0;
-	padding: 20px;
-	background: #2c3f52;
-	color: #ed4e6e;
+  padding: 0;
+	background: rgba($spot-color-riff,0.9);
+	color: $spot-color-light;
 }
 
-.grid figcaption h3 {
+.hover-caption {
+  	padding: ($univ-pad * 0.5);
+  }
+
+.cs-style-1 figcaption h3 {
 	margin: 0;
 	padding: 0;
 	color: #fff;
 }
 
-.grid figcaption span:before {
-	content: 'by ';
-}
 
-.grid figcaption a {
+.cs-style-1 figcaption a {
 	text-align: center;
 	padding: 5px 10px;
 	border-radius: 2px;
 	display: inline-block;
-	background: #ed4e6e;
+	background: $spot-color-light;
 	color: #fff;
 }
 
 /* Individual Caption Styles */
 
-/* Caption Style 1 */
 .cs-style-1 figcaption {
 	height: 100%;
 	width: 100%;
@@ -61,10 +59,10 @@
 .no-touch .cs-style-1 figure:hover figcaption,
 .cs-style-1 figure.cs-hover figcaption {
 	opacity: 1;
-	-webkit-transform: translate(15px, 15px);
-	-moz-transform: translate(15px, 15px);
-	-ms-transform: translate(15px, 15px);
-	transform: translate(15px, 15px);
+	-webkit-transform: translate(($univ-pad * 0.33), ($univ-pad * 0.33));
+	-moz-transform: translate(($univ-pad * 0.33), ($univ-pad * 0.33));
+	-ms-transform: translate(($univ-pad * 0.33), ($univ-pad * 0.33));
+	transform: translate(($univ-pad * 0.33), ($univ-pad * 0.33));
 }
 
 .cs-style-1 figcaption h3 {
@@ -80,10 +78,10 @@
 }
 
 @media screen and (max-width: 31.5em) {
-	.grid {
+	.cs-style-1 {
 		padding: 10px 10px 100px 10px;
 	}
-	.grid li {
+	.cs-style-1 li {
 		width: 100%;
 		min-width: 300px;
 	}
