--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,9 +1,18 @@
 $spot-color: rgb(60,0,255);
-$spot-color-riff: rgb(243,206,184);
-$spot-color-riff: rgb(255,77,0);
-$spot-color-riff: rgb(150,250,0);
 $spot-color-riff: rgb(250,250,0);
-$spot-color-riff: rgb(0,0,0);
+$spot-color-riff: rgb(150,250,0);
+$spot-color-riff: rgb(255,77,0);
+$spot-color-riff: rgb(243,206,184);
+$spot-color-dark: rgb(17,58,99);
+$spot-color-dark: rgb(27,44,61);
+
+
+$spot-color: rgb(255,96,12);
+$spot-color-riff: rgb(1,141,192);
+$spot-color-light: rgb(253,173,50);
+$spot-color-dark: rgb(228,237,233);
+
+
 
 $link-color: rgb(255,255,255);
 $link-color-inv: $link-color;
