--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,6 +13,7 @@ body {
   }
   
 h1, h2, h3, h4, h5, h6 {
+  font-family: Calibre, "Trebuchet MS", sans-serif;
   font-weight: 400;
   color: $spot-color;
   }
@@ -22,18 +23,21 @@ h1 {
   margin-bottom: $univ-pad;
   }
   
-h4 {
-  font-size: 32px;
-  font-weight: 400;
+h4 { /** Name (under pic) **/
+  font-size: 15px;
+  font-weight: 500;
   letter-spacing: 0.015em;
   line-height: 1em;
+  margin-top:  ($univ-pad * 0.66);
   color: $text-color;
+  text-transform: uppercase;
+  text-align: center;
   }
 
 
 p {
   color: $text-color;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 300;
   margin: 0;
   padding: 0;
@@ -56,8 +60,6 @@ p {
   
 .student {
   margin-bottom:($univ-pad * .5);
-  background-color: $spot-color;
-  background-color: #fff;
   }
   
 .student-container {
@@ -116,7 +118,7 @@ nav {
   width:100%;
   height:24px;
   padding:6px 12px;
-  background-color: #000;
+  background-color: $spot-color-dark;
   color:#fff;
   a {
     margin-right: ($univ-pad * 0.25); 
