--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,16 +1,6 @@
-$spot-color: rgb(60,0,255);
-$spot-color-riff: rgb(250,250,0);
-$spot-color-riff: rgb(150,250,0);
-$spot-color-riff: rgb(255,77,0);
-$spot-color-riff: rgb(243,206,184);
-$spot-color-dark: rgb(17,58,99);
-$spot-color-dark: rgb(27,44,61);
-
-
-$spot-color: rgb(255,96,12);
-$spot-color-riff: rgb(1,141,192);
-$spot-color-light: rgb(253,173,50);
-$spot-color-dark: rgb(228,237,233);
+$spot-color: rgb(60,0,255); // bright blue
+$spot-color-riff: rgb(194,237,219);  // mint
+$spot-color-dark: rgb(50,50,50);  // dark gray
 
 
 
